cluster/apps/external/minio/console-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: s3-console
  namespace: external
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  type: ExternalName
  externalName: "${NAS_ADDR}"
  ports:
    - port: 9769
