cluster/apps/external/minio/s3-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: s3
  namespace: external
spec:
  type: ExternalName
  externalName: "neon.${SECRET_PRIVATE_DOMAIN}"
  ports:
    - port: 9768
