cluster/apps/external/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: s3-console
  namespace: external
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  type: ExternalName
  externalName: 192.168.1.147
  ports:
    - port: 9769
