cluster/apps/external/minio/console.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "bucket-outline"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    kubernetes.io/ingress.class: "nginx"
    
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: s3-console
  namespace: external
spec:
  rules:
    - host: console.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: s3-console
                port:
                  number: 9769
  tls:
    - hosts:
        - console.${SECRET_DOMAIN}
      secretName: s3-console-tls
