cluster/apps/external/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: https://avatars.githubusercontent.com/u/9778794
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns/is-public: "true"
  name: minio
  namespace: external
spec:
  rules:
    - host: minio.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: minio
                port:
                  number: 9769
  tls:
    - hosts:
        - minio.${SECRET_DOMAIN}
      secretName: minio-external-cert
