cluster/apps/external/minio/s3.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: s3
  namespace: external
spec:
  rules:
    - host: s3.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: s3
                port:
                  number: 9768
  tls:
    - hosts:
        - s3.${SECRET_DOMAIN}
      secretName: s3-tls
